--- a/kubernetes/helm/local-values.yaml
+++ b/kubernetes/helm/local-values.yaml
@@ -1,1 +1,9 @@
 Env: local
+
+Apps:
+  Main:
+    Image: uryyyyyyy/spring-app-boot:8ac9a55
+    Env:
+      DefaultDBUrl: "192.168.99.2"
+  CloudSql:
+    Image: uryyyyyyy/cloud-sql:0.1
