--- a/kubernetes/helm/stg-values.yaml
+++ b/kubernetes/helm/stg-values.yaml
@@ -2,11 +2,13 @@ Env: stg
 
 Apps:
   Main:
-    Image: gcr.io/teak-trainer-806/spring-app-boot:f83ce99
+    Image: gcr.io/teak-trainer-806/spring-app-boot:2d3c9c2
     Env:
       DefaultDBUrl: "127.0.0.1"
   CloudSql:
     Image: gcr.io/teak-trainer-806/cloud-sql:0.1
+    Env:
+      CloudSqlInstance: "teak-trainer-806:asia-northeast1:app-db"
 
 Ingress:
   StaticIpName: "test-ip"
